# NEU-Linux-experiment

./: README.md
SnakeWar/: CMakeLists.txt  client.cpp  game.cpp  server.cpp
linuxExp/: CMakeLists.txt  myclient1.cpp  mycp.cpp  myfork.cpp  myfork2.cpp  myfork3.cpp  myfork3_2.cpp  myfork_21.c  myls_L.cpp  myls_R.cpp  mymice.cpp  mypipe.cpp  mypipe2.cpp  myserver1.cpp  myserver2.cpp  mysignal.cpp  mysignal2.cpp  mysignal3.cpp  mywebserver.cpp
